--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -1,11 +1,12 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-image: linear-gradient(to top, #fec9c4 0%, #f5efef 100%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  flex-flow: column;
+  padding-top: 5vh;
 }
