--- a/src/Styles/Dashboard.scss
+++ b/src/Styles/Dashboard.scss
@@ -14,7 +14,7 @@
         img {
             width: 90%;
             padding: 0.5em;
-            border-radius: 7em;
+            border-radius: 50%;
         }
     }
 
