--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -12,3 +12,10 @@ body {
       monospace;
   }
   
+  .content-container {
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    flex-direction: column;
+    align-items: center;
+  }
