--- a/src/styles/components/MenuBar.scss
+++ b/src/styles/components/MenuBar.scss
@@ -14,5 +14,20 @@
       display: inline;
       margin: 0.5em;
     }
+
+    a {
+      color: black;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: black;
+      text-decoration: none;
+    }
+
+    a:visited {
+      color: black;
+      text-decoration: none;
+    }
   }
   
