Some nice fonts added

--- a/src/styles/base/settings.scss
+++ b/src/styles/base/settings.scss
@@ -1,3 +1,8 @@
+@font-face { font-family: Allyca; src: url('/fonts/Allyca.otf'); }
+@font-face { font-family: BioRhyme; src: url('/fonts/BioRhyme-Light.ttf'); }
+
 $desktop-breakpoint: 45rem;
+$default-font-size: 20px;
 
 $color-black: #000;
+$default-font: BioRhyme;
