--- a/src/styles/components/Dashboard.scss
+++ b/src/styles/components/Dashboard.scss
@@ -1,16 +1,11 @@
 .dashboard {
-    text-align: center;
-    min-height: 50vh;
-    display: flex;
     width: 80%;
-    flex-flow: row;
-    flex-direction: row;
-    //border: 1px solid black;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: auto auto auto;
 
-    .photo {
-        width: 40%;
-        //border: 1px solid black;
-
+    .photo{
         img {
             width: 90%;
             padding: 0.5em;
@@ -19,10 +14,19 @@
     }
 
     .short-info {
-        width: 60%;
-        padding: 0.5em;
+        padding: 0.5em 2em;
         text-align: left;
-        //border: 1px solid black;
+    }
+
+    .portfolio-best-description {
+        margin-top: 3em;
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+
+    .portfolio-best {
+        grid-column-start: 1;
+        grid-column-end: 3;
     }
   }
   
