--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,4 @@
 @import "./components/App.scss";
 @import "./components/Dashboard.scss";
 @import "./components/MenuBar.scss";
+@import "./components/Footer.scss";
