--- a/src/styles/base/settings.scss
+++ b/src/styles/base/settings.scss
@@ -1,5 +1,6 @@
 @font-face { font-family: Allyca; src: url('/fonts/Allyca.otf'); }
 @font-face { font-family: BioRhyme; src: url('/fonts/BioRhyme-Light.ttf'); }
+@font-face { font-family: BioRhyme; src: url('/fonts/BioRhyme-Bold.ttf'); font-weight: bold;}
 
 $desktop-breakpoint: 45rem;
 $default-font-size: 20px;
