--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -1,4 +1,13 @@
 .footer {
-    bottom: 0px;
-    border: 1px solid black;
+    margin: 0.5em;
+    font-size: 0.5em;
+
+    p {
+        margin: 0;
+    }
+
+    a {
+        font-weight: bold;
+    }
+
 }
