--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -2,6 +2,7 @@ html, body, #root {
   min-width: fit-content;
   color: $color-black;
   background-image: radial-gradient(73% 147%, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146%, rgba(255,255,255,0.50) 47%, rgba(0,0,0,0.50) 100%);
+  //background-image: radial-gradient(73% 147% at 0 0, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146% at 0 0, rgba(255,255,255,0.50) 47%, rgba(0,0,0,0.50) 100%);
   background-blend-mode: screen;
   font-family: $default-font;
   font-size: $default-font-size;
@@ -17,9 +18,8 @@ a, a:hover, a:visited {
 }
 
 .content-container {
-  width: 70%;
+  width: 60%;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-flow: column;
   flex-direction: column;
