--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,8 @@
 @import "./base/base.scss";
 
 @import "./components/App.scss";
+@import "./components/Contact.scss";
+@import "./components/ContactForm.scss";
 @import "./components/Dashboard.scss";
 @import "./components/MenuBar.scss";
 @import "./components/Footer.scss";
