--- a/src/styles/components/Contact.scss
+++ b/src/styles/components/Contact.scss
@@ -6,7 +6,6 @@
 }
 
 .contact-me-header {
-  padding-left: 3em;
   align-items: center;
   text-align: center;
 }
@@ -15,7 +14,7 @@
   grid-row: 2;
   display: flex;
   flex-flow: column;
-  padding: 2.5em 1em 1em 1em;
+  padding: 2.5em 0em 1em 0em;
 
   p {
     margin: 0px;
@@ -30,5 +29,20 @@
   .link {
     display: flex;
     align-items: center;
+    white-space: nowrap;
+  }
+}
+
+@media screen and (max-width: $desktop-breakpoint) {
+  .contact-page {
+    display: flex;
+    flex-flow: column;
+    flex-direction: column;
+  }
+
+  .contact-me-links {
+    align-items: center;
+    padding: 0.5em 1em 1em 1em;
+    margin-right: 1em;
   }
 }
