--- a/src/styles/base/settings.scss
+++ b/src/styles/base/settings.scss
@@ -15,6 +15,8 @@
 $desktop-breakpoint: 45rem;
 $default-font-size: 20px;
 
+$mobile-font-size: 14px;
+
 $color-black: #000;
 $input-color: #fff;
 $button-color: #fff;
