--- a/src/styles/components/Dashboard.scss
+++ b/src/styles/components/Dashboard.scss
@@ -1,32 +1,45 @@
 .dashboard {
-    width: 80%;
-    text-align: center;
-    display: grid;
-    grid-template-columns: 40% 60%;
-    grid-template-rows: auto auto auto;
+  width: 80%;
+  text-align: center;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  grid-template-rows: auto auto auto;
 
-    .photo{
-        img {
-            width: 90%;
-            padding: 0.5em;
-            border-radius: 50%;
-        }
-    }
-
-    .short-info {
-        padding: 0.5em 2em;
-        text-align: left;
-    }
-
-    .portfolio-best-description {
-        margin-top: 3em;
-        grid-column-start: 1;
-        grid-column-end: 3;
-    }
-
-    .portfolio-best {
-        grid-column-start: 1;
-        grid-column-end: 3;
+  .photo {
+    img {
+      width: 90%;
+      padding: 0.5em;
+      border-radius: 50%;
     }
   }
-  
+
+  .short-info {
+    padding: 0.5em 2em;
+    text-align: left;
+  }
+
+  .portfolio-best-description {
+    margin-top: 3em;
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  .portfolio-best {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+}
+
+@media screen and (max-width: $desktop-breakpoint) {
+  .dashboard {
+    display: flex;
+    flex-flow: column;
+    flex-direction: column;
+    width: 100%;
+
+    .short-info {
+      padding: 0.5em 0.5em;
+      text-align: justify;
+    }
+  }
+}
