--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -1,13 +1,12 @@
 .footer {
-    margin: 0.5em;
-    font-size: 0.5em;
+  margin: 3em 0.5em 0.5em 0.5em;
+  font-size: 0.5em;
 
-    p {
-        margin: 0;
-    }
+  p {
+    margin: 0;
+  }
 
-    a {
-        font-weight: bold;
-    }
-
+  a {
+    font-weight: bold;
+  }
 }
