More style improvements

--- a/src/styles/base/settings.scss
+++ b/src/styles/base/settings.scss
@@ -13,9 +13,9 @@
 }
 
 $desktop-breakpoint: 45rem;
-$default-font-size: 20px;
+$default-font-size: 1em;
 
-$mobile-font-size: 14px;
+$mobile-font-size: 0.875rem;
 
 $color-black: #000;
 $input-color: #fff;
