--- a/src/styles/components/Dashboard.scss
+++ b/src/styles/components/Dashboard.scss
@@ -10,6 +10,8 @@
       width: 90%;
       padding: 0.5em;
       border-radius: 50%;
+      max-width: 424px;
+      max-height: 424px;
     }
   }
 
