--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -13,8 +13,8 @@ body,
   font-family: $default-font;
   font-size: $default-font-size;
 
-  min-height: 100% !important;
-  height: 100%;
+  min-height: 100vh !important;
+  //height: 100%;
   margin: 0;
 }
 
