--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -34,6 +34,12 @@ a:visited {
   flex-grow: 1;
 }
 
+.no-scroll {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
 @media screen and (max-width: $desktop-breakpoint) {
   html,
   body,
