--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,5 +5,8 @@
 @import "./components/Contact.scss";
 @import "./components/ContactForm.scss";
 @import "./components/Dashboard.scss";
+@import "./components/Image.scss";
 @import "./components/MenuBar.scss";
 @import "./components/Footer.scss";
+@import "./components/PortfolioCategory.scss";
+@import "./components/Thumbnail.scss";
