--- a/src/styles/base/settings.scss
+++ b/src/styles/base/settings.scss
@@ -12,10 +12,10 @@
   font-weight: bold;
 }
 
-$desktop-breakpoint: 45rem;
-$default-font-size: 1em;
+$mobile-breakpoint: 45em;
+$tablet-breakpoint: 66em;
 
-$mobile-font-size: 0.875rem;
+$default-font-size: 1em;
 
 $color-black: #000;
 $input-color: #fff;
