--- a/src/styles/components/PortfolioCategory.scss
+++ b/src/styles/components/PortfolioCategory.scss
@@ -32,3 +32,14 @@
     background-color: transparent;
   }
 }
+
+@media screen and (max-width: $mobile-breakpoint) {
+  .portfolioCategory {
+    margin-top: 0;
+
+    .portfolioImages {
+      display: flex;
+      flex-flow: column;
+    }
+  }
+}
