--- a/src/styles/components/Dashboard.scss
+++ b/src/styles/components/Dashboard.scss
@@ -32,7 +32,7 @@
   }
 }
 
-@media screen and (max-width: $desktop-breakpoint) {
+@media screen and (max-width: $mobile-breakpoint) {
   .dashboard {
     display: flex;
     flex-flow: column;
