--- a/src/styles/components/Image.scss
+++ b/src/styles/components/Image.scss
@@ -7,13 +7,40 @@
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: center;
   overflow: hidden;
+  color: white;
 
-  img {
-    width: auto;
-    height: auto;
-    max-width: 90%;
-    max-height: 90%;
-    vertical-align: middle;
+  .image {
     margin: auto;
+    width: 90%;
+    height: 90%;
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      max-width: 85%;
+      max-height: 85%;
+      width: auto;
+      height: auto;
+    }
+
+    p {
+      margin: 0;
+    }
+  }
+}
+
+@media screen and (max-width: $mobile-breakpoint) {
+  .image-overflow {
+    .image {
+      width: 100%;
+      height: 100%;
+      img {
+        max-width: 100%;
+        max-height: 95%;
+      }
+    }
   }
 }
