--- a/src/styles/components/MenuBar.scss
+++ b/src/styles/components/MenuBar.scss
@@ -32,10 +32,20 @@ $increaseBy: 1.1;
     -o-transform: scale(#{$increaseBy});
   }
 }
-
-@media screen and (max-width: $desktop-breakpoint) {
+@media screen and (max-width: $tablet-breakpoint) {
   .menubar {
+    margin-top: 1em;
+    margin-bottom: 0;
     width: 100%;
+
+    ul li {
+      margin: 0.25em;
+    }
+  }
+}
+
+@media screen and (max-width: $mobile-breakpoint) {
+  .menubar {
     margin-top: 0em;
     margin-bottom: 0em;
     font-size: $mobile-size;
