--- a/src/styles/components/Thumbnail.scss
+++ b/src/styles/components/Thumbnail.scss
@@ -1,13 +1,20 @@
 .thumbnail {
-    display: inline-block;
-    height: 400px;
-    width: 400px;
-    background-color: red;
-    border: 1px solid black;
-    cursor: pointer;
+  display: inline-block;
+  height: 400px;
+  width: 400px;
+  cursor: pointer;
+  margin: auto;
 
-    img {
-        width: 100%;
-        height: 100%;
-    }
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: $mobile-breakpoint) {
+  .thumbnail {
+    width: auto;
+    height: auto;
+    margin-top: 1em;
+  }
 }
