--- a/src/styles/components/Image.scss
+++ b/src/styles/components/Image.scss
@@ -3,7 +3,7 @@
   position: absolute;
   z-index: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: center;
   overflow: hidden;
