--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,12 +1,13 @@
 @import "./base/settings.scss";
 @import "./base/base.scss";
 
+@import "./components/About.scss";
 @import "./components/App.scss";
 @import "./components/Contact.scss";
 @import "./components/ContactForm.scss";
-@import "./components/Dashboard.scss";
 @import "./components/Image.scss";
 @import "./components/MenuBar.scss";
 @import "./components/Footer.scss";
 @import "./components/PortfolioCategory.scss";
 @import "./components/Thumbnail.scss";
+@import "./components/TimeLine.scss";
