--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -24,12 +24,14 @@ a:visited {
 }
 
 .content-container {
+  max-width: 90em;
   width: 80%;
   display: flex;
   align-items: center;
   flex-flow: column;
   flex-direction: column;
   flex-grow: 1;
+  margin: auto;
 }
 
 .no-scroll {
